# CalabrioMAFVersion

./: .commitlintrc.json  .dockerignore  .env.example  .gitignore  docker-compose.override.yml.example  docker-compose.yml
.github/: CODEOWNERS  branch-protection.main.json  dependabot.yml  pull_request_template.md
.squad/: decisions.md  routing.md
database/: 01-schemas-and-tables.sql  02-views.sql  03-seed-data.sql  04-grant-readonly.sql
docs/: local-dev-guide.md  local-dev.md  sandbox-deployment-checklist.md  spike-results.md
requirementsDescription/: propuesta-arquitectura-modernizada.md
src/agent_host/: Dockerfile  pyproject.toml
src/agent_host/app/: __init__.py  config.py  foundry_client.py  main.py  models.py  otel_setup.py  schemas.py  workflow.py
src/agent_host/app/middleware/: __init__.py  exceptions.py  hmac_signer.py  pii_detector.py  prompt_shields.py  sql_validator.py
src/agent_host/prompts/: intent-classifier.yaml  query-executor.yaml  sql-builder.yaml  wfm-supervisor.yaml
src/agent_host/tests/: __init__.py  conftest.py  test_chat_endpoint.py  test_foundry_client.py  test_health.py  test_ready_chat.py  test_schemas.py  test_sse_endpoint.py  test_workflow.py  test_workflow_bu.py  test_workflow_streaming.py
src/agent_host/tests/test_middleware/: test_hmac_signer.py  test_middleware_init.py  test_pii_detector.py  test_prompt_shields.py  test_sql_validator.py
src/apim/: README.md
src/mcp_forecast/: Dockerfile  pyproject.toml
src/mcp_forecast/app/: __init__.py  config.py  otel_setup.py  server.py
src/mcp_forecast/tests/: __init__.py
(+128 files in other folders)
