[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-host"
version = "0.1.0"
description = "Sprint 0 Agent Host skeleton"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-json-logger>=2.0.7",
  "opentelemetry-sdk>=1.27.0",
  "azure-monitor-opentelemetry-exporter>=1.0.0b30",
  "azure-ai-projects>=2.0.0",
  "azure-identity>=1.19.0",
  "sqlglot>=25.17.0",
]

[project.optional-dependencies]
workflow = [
  "httpx>=0.27.0",
  "pyyaml>=6.0",
]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["app", "app.middleware"]

[tool.pytest.ini_options]
markers = [
  "integration: integration tests",
]
