[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-forecast"
version = "0.1.0"
description = "Sprint 0 MCP Forecast skeleton"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.0.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-json-logger>=2.0.7",
  "opentelemetry-sdk>=1.27.0",
  "azure-monitor-opentelemetry-exporter>=1.0.0b30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["app"]
